--- a/style.css
+++ b/style.css
@@ -1,18 +1,33 @@
 body{
 background-color: #5C97BF;
+margin: 0px;
+    padding: 0px;
 }
 
-h1, a, p, li{
+h1, h2, a, p, li{
 font-family: sans-serif, "Helvetica Neue";
 text-align: center;
 text-decoration: none;
-letter-spacing: 4px;
 color: #fff;
 }
 
 h1{
 font-size: 2.5em;
+letter-spacing: 4px;
 }
+
+h2{
+font-weight: 100;
+letter-spacing: 2px;
+color: #fff;
+}
+
+p{
+letter-spacing: 1px;
+margin: 0px;
+padding: 0px;
+}
+
 
 li{
 list-style: none;
@@ -35,6 +50,77 @@ margin-top: 80px;
 }
 
 
+
+.form_container{
+width: 500px;
+background-color: skyblue;
+margin: 30px auto;
+padding-top: 40px;
+padding-bottom: 40px;
+text-align: center;
+border-radius: 10px;
+}
+
+
+input[type=text]{
+width: 400px;
+padding: 16px;
+border: 1px solid #fff;
+border-radius: 10px;
+box-sizing: border-box;
+display: inline-block;
+}
+
+input[type=text], p{
+font-size: 0.9em;
+font-style: italic;
+}
+
+
+input[type=submit]{
+background-color: lightcoral;
+padding: 16px;
+width: 100px;
+margin: 20px;
+border: 1px solid lightcoral;
+border-radius: 10px;
+box-sizing: border-box;
+display: inline-block;
+}
+
+input[type=submit], p{
+font-size: 0.8em;
+color: #fff;
+
+}
+
+.all_tasks_container{
+margin: 30px;
+}
+
+.current_tasks_container{
+width: 500px;
+background-color: lightcoral;
+margin: 30px auto;
+padding-top: 50px;
+padding-bottom: 50px;
+text-align: center;
+border-radius: 10px;
+}
+
+.completed_tasks_container{
+width: 500px;
+background-color: lightgreen;
+margin: 30px auto;
+padding-top: 50px;
+padding-bottom: 50px;
+text-align: center;
+border-radius: 10px;
+}
+
 footer{
+background-color: #2b678b;
+padding-top: 35px;
 margin-top: 200px;
+padding-bottom: 15px;
 }
