--- a/style.css
+++ b/style.css
@@ -1,3 +1,6 @@
+/* Lägg completed och current-boxarna brevid varandra istället?*/
+/*Sätta en max-width kanske*/
+
 body{
 background-color: #5C97BF;
 margin: 0px;
@@ -51,7 +54,7 @@ margin-top: 80px;
 
 
 
-.form_container{
+.input_task_container{
 width: 500px;
 background-color: skyblue;
 margin: 30px auto;
@@ -94,6 +97,28 @@ color: #fff;
 
 }
 
+input[id=complete_task]{
+background-color: seagreen;
+padding: 12px;
+width: 100px;
+margin: 20px;
+border: 1px solid lightcoral;
+border-radius: 10px;
+box-sizing: border-box;
+display: inline-block;
+}
+
+input[id=delete_task]{
+background-color: indianred;
+padding: 12px;
+width: 100px;
+margin: 20px;
+border: 1px solid lightcoral;
+border-radius: 10px;
+box-sizing: border-box;
+display: inline-block;
+}
+
 .all_tasks_container{
 margin: 30px;
 }
@@ -108,6 +133,16 @@ text-align: center;
 border-radius: 10px;
 }
 
+.current_tasks_container, p{
+font-style: normal;
+font-size: 0.9em;
+font-weight: 100;
+}
+
+.input_task_container, p{
+font-style: italic;
+}
+
 .completed_tasks_container{
 width: 500px;
 background-color: lightgreen;
@@ -117,6 +152,7 @@ padding-bottom: 50px;
 text-align: center;
 border-radius: 10px;
 }
+
 
 footer{
 background-color: #2b678b;
