--- a/style.css
+++ b/style.css
@@ -1,34 +1,205 @@
-/* Lägg completed och current-boxarna brevid varandra istället?*/
-/*Sätta en max-width kanske*/
-
 body{
 background-color: #5C97BF;
 margin: 0px;
-    padding: 0px;
+padding: 0px;
 }
 
-h1, h2, a, p, li{
-font-family: sans-serif, "Helvetica Neue";
+a, p, li{
+font-family: 'Roboto', sans-serif; 
 text-align: center;
 text-decoration: none;
 color: #fff;
+letter-spacing: 2px;
+line-height: 140%;
+margin: 0px;
+padding: 0px;
 }
 
-h1{
-font-size: 2.5em;
-letter-spacing: 4px;
+h1, h2{
+font-family: 'Fredoka One', cursive;
+text-align: center;
+font-size: 2.2em;
+margin: 10px;
+color: #fff;
+letter-spacing: 3px;
 }
 
 h2{
-font-weight: 100;
-letter-spacing: 2px;
-color: #fff;
+font-family: 'Roboto', sans-serif; 
+font-size: 1.9em;
 }
 
-p{
-letter-spacing: 1px;
+
+header{
+margin-top: 80px;
+}
+
+
+
+/* ------------------------- CONTAINER STYLING ---------------------------*/
+
+.all_tasks_container{
 margin: 0px;
-padding: 0px;
+}
+
+.input_task_container{
+width: 90vw;
+height: 300px;
+background-color: skyblue;
+margin: 30px auto;
+padding-top: 20px;
+padding-bottom: 50px;
+text-align: center;
+border-radius: 15px;
+}
+
+
+.current_tasks_container{
+width: 90vw;
+background-color: lightcoral;
+margin: 20px auto;
+padding-top: 20px;
+padding-bottom: 50px;
+text-align: center;
+border-radius: 15px;
+}
+
+
+.completed_tasks_container{
+width: 90vw;
+background-color: lightgreen;
+margin: 20px auto;
+padding-top: 20px;
+padding-bottom: 50px;
+text-align: center;
+border-radius: 15px;
+}
+
+.single_task_box{
+width: 60vw;
+padding: 10px;
+margin: 15px;
+background-color: #fff;
+border-radius: 15px;
+box-sizing: border-box;
+display: inline-block;
+}
+
+.single_task_box>p{
+font-size: 1em;
+margin-top: 10px;
+font-weight: 200;
+font-style: normal;
+color: grey;
+}
+
+#createdby_text{
+margin-top: -5px;
+margin-bottom: 10px;
+font-size: 0.9em;
+color: lightgrey;
+font-style: italic;
+}
+
+#completedtask_title{
+text-decoration: line-through;
+font-style: italic;
+}
+
+.actions_box{
+display: flex;
+flex-direction: row;
+justify-content: center;
+}
+
+
+/* ----------------------- INPUT FIELDS STYLING ---------------------------*/
+
+
+input[type=text]{
+width: 70vw;
+padding: 16px;
+margin-top: 10px;
+border: 1px solid #fff;
+border-radius: 10px;
+box-sizing: border-box;
+display: inline-block;
+}
+
+input[type=text], p{
+font-size: 0.9em;
+font-style: italic;
+}
+
+
+input[type=submit]{    
+background-color: lightcoral;
+border: 1px solid lightcoral;
+padding: 16px;
+width: 100px;
+margin-top: 10px;
+margin-bottom: 20px;
+border-radius: 10px;
+box-sizing: border-box;
+display: inline-block;
+}
+
+input[type=submit], p{
+font-size: 0.9em;
+color: #fff;
+
+}
+
+input[id=complete_task]{
+background-color: seagreen;
+padding: 10px;
+margin: 10px;
+border-radius: 10px;
+box-sizing: border-box;
+display: inline-block;
+}
+
+input[id=delete_task]{
+background-color: indianred;
+padding: 10px;
+margin: 10px;
+border-radius: 10px;
+box-sizing: border-box;
+display: inline-block;
+}
+
+
+input[id=delete_completed_task]{
+background-color: lightgray;
+padding: 10px;
+margin: 10px;
+border-radius: 10px;
+box-sizing: border-box;
+display: inline-block;
+}
+
+
+
+/* -------------------------- FOOTER STYLING ---------------------------*/
+
+
+footer{
+background-color: #2b678b;
+padding-top: 35px;
+margin-top: 80px;
+padding-bottom: 15px;
+}
+
+
+footer, a{
+font-size: 0.9em;
+letter-spacing: 6px;
+}
+
+a:hover{
+color: lightblue;
+font-size: 0.9em;
+letter-spacing: 6px;
 }
 
 
@@ -48,115 +219,35 @@ font-size: 2.5em;
 }
 
 
-header{
-margin-top: 80px;
-}
 
-
+@media screen and (min-width: 700px){
 
 .input_task_container{
-width: 500px;
-background-color: skyblue;
-margin: 30px auto;
-padding-top: 40px;
-padding-bottom: 40px;
-text-align: center;
-border-radius: 10px;
-}
-
-
-input[type=text]{
-width: 400px;
-padding: 16px;
-border: 1px solid #fff;
-border-radius: 10px;
-box-sizing: border-box;
-display: inline-block;
-}
-
-input[type=text], p{
-font-size: 0.9em;
-font-style: italic;
-}
-
-
-input[type=submit]{
-background-color: lightcoral;
-padding: 16px;
-width: 100px;
-margin: 20px;
-border: 1px solid lightcoral;
-border-radius: 10px;
-box-sizing: border-box;
-display: inline-block;
-}
-
-input[type=submit], p{
-font-size: 0.8em;
-color: #fff;
-
-}
-
-input[id=complete_task]{
-background-color: seagreen;
-padding: 12px;
-width: 100px;
-margin: 20px;
-border: 1px solid lightcoral;
-border-radius: 10px;
-box-sizing: border-box;
-display: inline-block;
-}
-
-input[id=delete_task]{
-background-color: indianred;
-padding: 12px;
-width: 100px;
-margin: 20px;
-border: 1px solid lightcoral;
-border-radius: 10px;
-box-sizing: border-box;
-display: inline-block;
+flex: 1;
+margin: 65px auto;
 }
 
 .all_tasks_container{
-margin: 30px;
+display: flex;
+flex-direction: row;
 }
-
+    
+    
 .current_tasks_container{
-width: 500px;
-background-color: lightcoral;
-margin: 30px auto;
-padding-top: 50px;
-padding-bottom: 50px;
-text-align: center;
-border-radius: 10px;
+flex: 2;
+margin-left: 65px;
+margin-right: 30px;
 }
 
-.current_tasks_container, p{
-font-style: normal;
-font-size: 0.9em;
-font-weight: 100;
-}
-
-.input_task_container, p{
-font-style: italic;
-}
 
 .completed_tasks_container{
-width: 500px;
-background-color: lightgreen;
-margin: 30px auto;
-padding-top: 50px;
-padding-bottom: 50px;
-text-align: center;
-border-radius: 10px;
+flex: 2;
+margin-right: 65px;
+margin-left: 30px;
 }
 
+    
 
-footer{
-background-color: #2b678b;
-padding-top: 35px;
-margin-top: 200px;
-padding-bottom: 15px;
+.single_task_box{
+width: 35vw;
 }
